2005-02-08  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "xh" to ALL_LINGUAS.

2005-02-07  Christian Kellner  <gicmo@gnome.org>

	* programs/gnomevfs-copy.c: Reworked to have cp semantics so that
	if the destination is a directory don't overwrite the it but copy
	the source into it.
	This is the first part of the fix for #149666!

2005-02-06  Crispin Flowerday  <gnome@flowerday.cx>

	* libgnomevfs/gnome-vfs-mime-handlers.c:
	The new mime API is new in 2.10, not 2.8. Fixes bug #166478

2005-02-03  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-mime-info.h:
	gnome_vfs_mime_set_value was declared twice
	
2005-03-01  Christian Kellner  <gicmo@gnome.org>

	* libgnomevfs/gnome-vfs-xfer.c (gnome_vfs_destination_is_writable):
	Don't try to create a temporary file to check if the destination
	is writable but use new GNOME_VFS_FILE_INFO_GET_ACCESS_RIGHTS option
	of gnome_vfs_get_file_info (). This should also fix bug #78486.

2005-02-01  Christian Kellner  <gicmo@gnome.org>

	* OUTSTANDING_API_ISSUES: Remove that file because
	it is very old, wasn't maintained and we can't do
	API changes like that anyway.
		
2005-01-31  Alexander Larsson  <alexl@redhat.com>

	* modules/dns-sd-method.c:
	Browse for the new sftp-ssh service.

2005-01-31  Christian Kellner  <gicmo@gnome.org>

	* acinclude.m4: Correct neon version to 0.24.7 because this will
	be sent as the value of the User-Agent header with every request.

2005-01-31  Christian Kellner  <gicmo@gnome.org>

	* libgnomevfs/gnome-vfs-uri.c (set_uri_element): Treat https,
	dav, and davs as http when doing additional escaping. This is
	not the best way to fix the broken uri escaping at this palce
	but it should be ok for now. (Removed old eazel-service method)

2005-01-31  Christian Kellner  <gicmo@gnome.org>

	* schemas/system_http_proxy.schemas.in: Correct bad grammar.
	This fixes bug #150342.

	Patch from Ryan Lortie <desrt@desrt.ca>

2005-01-30  Christian Kellner  <gicmo@gnome.org>
